edit file name dari annis boostrap menjadi index.html

--- a/about.html
+++ b/about.html
@@ -13,6 +13,6 @@
 	<center><h1><b>About</b></h1></center>
 	<pre><p><b>   Olshop Cella adalah toko serba ada (toserba) yang menjual fashion pria dan fashion wanita. 
 	                        Olshop Cella berdiri sejak tahun 2019.</b></p></pre>
-	<a href="annis boostrap.html">Kembali</a>
+	<a href="index.html">Kembali</a>
 </body>
 </html>
