--- a/gallery.html
+++ b/gallery.html
@@ -19,6 +19,6 @@
 	<img src="rok.jpg" width="300" height="300">
 	<img src="kebaya.jpg" width="300" height="260">
 	<img src="batik.jpg" width="300" height="260">
-	<a href="annis boostrap.html">Kembali</a>
+	<a href="index.html">Kembali</a>
 </body>
 </html>
