--- a/gamis detail.html
+++ b/gamis detail.html
@@ -24,6 +24,6 @@ kualitas bagus jadi enggak bikin si kecil panas :)
 Harga murah tapi enggak murahan ya
 Kualitas bahan dijamin bagus
 Jahitan konveksi rapi</b></p></pre>
-	<a href="annis boostrap.html">Kembali</a>
+	<a href="index.html">Kembali</a>
 </body>
 </html>
