--- a/jam detail.html
+++ b/jam detail.html
@@ -26,6 +26,6 @@ Free baterai cadangan
 Komplain : maksimal 1 x 24 jam
 Dipacking rapih dan aman
 Dipacking bubble gratis</p></pre>
-	<a href="annis boostrap.html">Kembali</a>
+	<a href="index.html">Kembali</a>
 </body>
 </html>
