--- a/kontak.html
+++ b/kontak.html
@@ -12,6 +12,6 @@
 <body background="bg.jpg">
 	<center><h1><b>Contact</b></h1></center>
 	<pre><p><b>     No. Hp = 089611979371  atau  email = anisshella07@gmail.com</p></b></pre>
-	<a href="annis boostrap.html">Kembali</a>
+	<a href="index.html">Kembali</a>
 </body>
 </html>
