--- a/sign in.html
+++ b/sign in.html
@@ -30,6 +30,6 @@
       </form>
     </div>
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-    <a href="annis boostrap.html">Kembali</a>
+    <a href="index.html">Kembali</a>
   </body>
 </html>
