--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
     <title>Cella's Olshop</title>
-    <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+    <link href="../dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <script src="../assets/js/ie-emulation-modes-warning.js"></script>
     <link href="annis.css" rel="stylesheet">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
